@@ -1,4 +1,13 @@
 <STRONG>Changes since 0.9.4</STRONG><BR><BR>
+Warning: The build 0.9.4.1311 is one of those "risky" updates. You shouldn't rely your critical work on it. The changes
+include:<BR>
+<UL>
+	<LI> Improved wrapping behavior. Resizing window now re-wraps long lines. </LI>
+	<LI> Generally improved resizing behavior.  </LI>
+	<LI> Faster response if you use dynamic titling a lot. </LI>
+	<LI> Reduced CPU usage. </LI>
+</UL>
+
 The build 0.9.4.1306 includes the following changes:<BR>
 <UL>
 	<LI> Improved memory usage for "unlimited" scrollback situation. An upper limit is set to avoid eating up all system memory.</LI>
